fixed the alignment of the icons in the divs

--- a/index.css
+++ b/index.css
@@ -4,4 +4,6 @@
     border-radius: 50%;
     background: yellow;
     border: 15px solid black;
+    margin: 20px;
+    padding: 25px 27px;
 }
